fixed some layout issues

--- a/styles/partials/_gallery.scss
+++ b/styles/partials/_gallery.scss
@@ -4,16 +4,20 @@
 
 .gallery {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    padding: 1.875rem;
-    background-color: $Alabaster;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    padding: 0 1.5rem;
+    background: #fafafa;
 
     @include tablet {
-        justify-content: space-between;
+        justify-content: space-evenly;
+        padding: 0 1.5rem;
     }
 
     @include desktop {
-        padding: 1rem 5rem;
+        padding: 0 6.5rem;        
     }
 
     .gallery__text {
@@ -25,12 +29,12 @@
 
     img {
         width: 90%;
-        transition: filter 0.3s, background-color 0.3s;
+        // transition: filter 0.3s, background-color 0.3s;
         max-width: 33.125rem;
         padding: 0.3125rem;
 
         &:hover {
-            width: 100%;
+            // width: 100%;
             filter: grayscale(20%);
             background-color: $silver;
         }
@@ -47,5 +51,12 @@
 }
 
 .background-img {
-    padding: .3125rem;
+    width: 100vw;
+    -o-object-fit: cover;
+    object-fit: cover;
+    padding: 0 1rem 1rem 1rem;
+    filter: grayscale(1);
+}
+.background-img:hover {
+    filter: grayscale(0);
 }
