--- a/styles/partials/_hero.scss
+++ b/styles/partials/_hero.scss
@@ -39,7 +39,7 @@ h1 {
     color: #fff;
     font-size: 2rem;
     overflow-wrap: break-word;
-    font-weight: normal;
+    font-weight: bold;
 }
 
 .shows__music-header {
